--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
@@ -375,6 +375,10 @@ COM_KUNENA_TEMPLATE_DISPLAY_INSTAGRAM="Show Instagram"
 COM_KUNENA_TEMPLATE_DISPLAY_INSTAGRAM_DESC="Show Instagram"
 COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD="Show Soundcloud"
 COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD_DESC="Show Soundcloud"
+COM_KUNENA_TEMPLATE_EDITOR="Choose editor"
+COM_KUNENA_TEMPLATE_EDITOR_DESC="Select your favorite editor"
+COM_KUNENA_TEMPLATE_EDITOR_BBCODE="BBcode"
+COM_KUNENA_TEMPLATE_EDITOR_WYSIBB="Wysibb"
 
 ; Automatically generated strings for COM_KUNENA_MYPROFILE_*
 
