--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -535,6 +535,8 @@ COM_KUNENA_CONFIG_ATTACHMENT_SHORTHEN_NAME_END = "Number of characters from end 
 COM_KUNENA_CONFIG_ATTACHMENT_SHORTHEN_NAME_END_DESC = "Define the number of characters from end when shorthen attachments filemane"
 COM_KUNENA_CONFIGURATION_GOOGLE_MAPS_API_KEY = "Google maps API key to get better stats usage of google API"
 COM_KUNENA_CONFIGURATION_GOOGLE_MAPS_API_KEY_DESC  = "Google maps API key to get better stats usage of google API. You need to enable the Google Maps Geocoding API in the developer console. <a href='https://console.developers.google.com/flows/enableapi?apiid=maps_backend&keyType=CLIENT_SIDE&reusekey=true' target='_blank'>Ask your API key</a>"
+COM_KUNENA_CONFIGURATION_ATTACHMENT_FILENAME_UTF8 = "Enable utf8 characters on attachments"
+COM_KUNENA_CONFIGURATION_ATTACHMENT_FILENAME_UTF8_DESC = "Enable utf8 characters on attachments filename which are uploaded on the server."
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
