--- a/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
+++ b/src/administrator/components/com_kunena/language/en-GB/en-GB.com_kunena.views.ini
@@ -538,6 +538,8 @@ COM_KUNENA_CONFIGURATION_GOOGLE_MAPS_API_KEY = "Google maps API key to get bette
 COM_KUNENA_CONFIGURATION_GOOGLE_MAPS_API_KEY_DESC  = "Google maps API key to get better stats usage of google API. You need to enable the Google Maps Geocoding API in the developer console. <a href='https://console.developers.google.com/flows/enableapi?apiid=maps_backend&keyType=CLIENT_SIDE&reusekey=true' target='_blank'>Ask your API key</a>"
 COM_KUNENA_CONFIGURATION_ATTACHMENT_FILENAME_UTF8 = "Enable utf8 characters on attachments"
 COM_KUNENA_CONFIGURATION_ATTACHMENT_FILENAME_UTF8_DESC = "Enable utf8 characters on attachments filename which are uploaded on the server."
+COM_KUNENA_CONFIGURATION_AUTOEMBEDSOUNDCLOUD = "Auto Embed Soundcloud items"
+COM_KUNENA_CONFIGURATION_AUTOEMBEDSOUNDCLOUD_DESC = "Set to Yes if you want Soundcloud items to get automatically embedded."
 
 ; JROOT/administrator/components/com_kunena/views/config/tmpl/modal.php
 
