--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.ini
@@ -423,7 +423,7 @@ COM_KUNENA_TOPIC_RATING_PRETTYGOOD = "Good"
 COM_KUNENA_TOPIC_RATING_MEH = "Medium"
 COM_KUNENA_TOPIC_RATING_KINDABAD = "Bad"
 COM_KUNENA_TOPIC_RATING_SUCKS = "Very bad"
-COM_KUNENA_RATE_LOGIN = "You need to be logged to add rate"
+COM_KUNENA_RATE_LOGIN = "You need to be logged in to rate topic"
 COM_KUNENA_RATE_NOT_YOURSELF = "You cannot rate your own topic"
 COM_KUNENA_RATE_ALLREADY = "You have already rated this topic"
 COM_KUNENA_RATE_SUCCESSFULLY_SAVED = "Your rating has been successfully saved"
