--- a/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
+++ b/src/components/com_kunena/language/en-GB/en-GB.com_kunena.templates.ini
@@ -22,13 +22,13 @@ COM_KUNENA_ICON_QUESTION = "Question?"
 COM_KUNENA_ICON_SHOCK = "Shocked"
 COM_KUNENA_ICON_SMILE = "Smiling"
 COM_KUNENA_ICON_SOLVED = "Solved"
-COM_KUNENA_TEMPLATE_LABELS = "Show Labels"
-COM_KUNENA_TEMPLATE_LABELS_DESC = "Show Labels on topic row"
-COM_KUNENA_TEMPLATE_PROFILE_TYPE = "Avatar Type"
-COM_KUNENA_TEMPLATE_PROFILE_TYPE_DESC = "Select the Avatar type"
-COM_KUNENA_TEMPLATE_ROUNDED = "Rounded"
-COM_KUNENA_TEMPLATE_CIRCLE = "Circle"
-COM_KUNENA_TEMPLATE_THUMBNAIL = "Thumbnail"
+COM_KUNENA_TEMPLATE_LABELS="Show Labels"
+COM_KUNENA_TEMPLATE_LABELS_DESC="Show Labels on topic row"
+COM_KUNENA_TEMPLATE_PROFILE_TYPE="Avatar Type"
+COM_KUNENA_TEMPLATE_PROFILE_TYPE_DESC="Select the Avatar type"
+COM_KUNENA_TEMPLATE_ROUNDED="Rounded"
+COM_KUNENA_TEMPLATE_CIRCLE="Circle"
+COM_KUNENA_TEMPLATE_THUMBNAIL="Thumbnail"
 
 ; JROOT/components/com_kunena/template/
 
@@ -198,8 +198,8 @@ COM_KUNENA_PASS = "Password:"
 COM_KUNENA_POLLUSERS_MORE = "See more"
 COM_KUNENA_POLL_ADD_POLL_OPTION = "Add Poll Option"
 COM_KUNENA_POLL_BUTTON_VOTE = "Vote"
-COM_KUNENA_POLL_BUTTON_VIEW_RESULTS = "View Poll Results"
-COM_KUNENA_POLL_BUTTON_HIDE_RESULTS = "Hide Poll Results"
+COM_KUNENA_POLL_BUTTON_VIEW_RESULTS="View Poll Results"
+COM_KUNENA_POLL_BUTTON_HIDE_RESULTS="Hide Poll Results"
 COM_KUNENA_POLL_NAME = "Poll:"
 COM_KUNENA_POLL_NOT_LOGGED = "Only registered users can participate to this poll"
 COM_KUNENA_POLL_NO_VOTE = "No votes"
@@ -348,33 +348,65 @@ COM_KUNENA_VPASS = "Verify Password:"
 COM_KUNENA_USER_ATTACHMENT_FILE_WEIGHT = "KB"
 COM_KUNENA_ATTACHMENT_MANAGER_TOPIC = "Topic link"
 COM_KUNENA_MODERATION_CHANGE_TOPIC_ICON = "Change topic icon"
-COM_KUNENA_A_TEMPLATE_MANAGER_TOPICICONS = "Topic Icons"
-COM_KUNENA_A_TEMPLATE_MANAGER_TOPICICONS_DESC = "Enable topicons css"
-COM_KUNENA_TEMPLATE_DISPLAY_FONTAWESOME = "Load External CDN Fontawesome"
-COM_KUNENA_TEMPLATE_DISPLAY_FONTAWESOME_DESC = "Load External CDN Fontawesome"
-COM_KUNENA_TEMPLATE_NONE = "Normal"
-COM_KUNENA_TEMPLATE_NORMAL = "Default"
-COM_KUNENA_TEMPLATE_BOOTSTRAP2 = "Bootstrap 2"
-COM_KUNENA_TEMPLATE_BOOTSTRAP3 = "Bootstrap 3"
-COM_KUNENA_TEMPLATE_FONTAWESOME = "Fontawesome"
-COM_KUNENA_SHOWIMGFORGUEST_HIDEIMG_MULTIPLES = "This message has attachments images.<br /> Please log in or register to see it."
-COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE_MULTIPLES = "This message has attachments files.<br /> Please log in or register to see it."
-COM_KUNENA_SHOWIMGFORGUEST_HIDEIMG_SIMPLE = "This message has an attachment image.<br /> Please log in or register to see it."
-COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE_SIMPLE = "This message has an attachment file.<br /> Please log in or register to see it."
+COM_KUNENA_A_TEMPLATE_MANAGER_TOPICICONS="Topic Icons"
+COM_KUNENA_A_TEMPLATE_MANAGER_TOPICICONS_DESC="Enable topicons css"
+COM_KUNENA_TEMPLATE_DISPLAY_FONTAWESOME="Load External CDN Fontawesome"
+COM_KUNENA_TEMPLATE_DISPLAY_FONTAWESOME_DESC="Load External CDN Fontawesome"
+COM_KUNENA_TEMPLATE_NONE="Normal"
+COM_KUNENA_TEMPLATE_NORMAL="Default"
+COM_KUNENA_TEMPLATE_BOOTSTRAP2="Bootstrap 2"
+COM_KUNENA_TEMPLATE_BOOTSTRAP3="Bootstrap 3"
+COM_KUNENA_TEMPLATE_FONTAWESOME="Fontawesome"
+COM_KUNENA_SHOWIMGFORGUEST_HIDEIMG_MULTIPLES="This message has attachments images.<br /> Please log in or register to see it."
+COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE_MULTIPLES="This message has attachments files.<br /> Please log in or register to see it."
+COM_KUNENA_SHOWIMGFORGUEST_HIDEIMG_SIMPLE="This message has an attachment image.<br /> Please log in or register to see it."
+COM_KUNENA_SHOWIMGFORGUEST_HIDEFILE_SIMPLE="This message has an attachment file.<br /> Please log in or register to see it."
 COM_KUNENA_AUP_MEDALS = "Medals:"
-COM_KUNENA_TEMPLATE_WHOISONLINE_NAME = "Whoisonline"
-COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_DESC = "How to show Whoisonline users"
-COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_NAME = "Name"
-COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_AVATAR = "Avatar"
-COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_BOTH = "Both"
-COM_KUNENA_TEMPLATE_LOAD_BOOTSTRAP = "Load Bootstrap css"
-COM_KUNENA_TEMPLATE_LOAD_BOOTSTRAP_DESC = "Load Bootstrap css for none Bootstrap templates"
-COM_KUNENA_TEMPLATE_DISPLAY_WRITEACCESS = "Write Access"
-COM_KUNENA_TEMPLATE_DISPLAY_WRITEACCESS_DESC = "Show the access rights on the bottom of the topics"
-COM_KUNENA_TEMPLATE_DISPLAY_INSTAGRAM = "Show Instagram"
-COM_KUNENA_TEMPLATE_DISPLAY_INSTAGRAM_DESC = "Show Instagram"
-COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD = "Show Soundcloud"
-COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD_DESC = "Show Soundcloud"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME="Whoisonline"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_DESC="How to show Whoisonline users"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_NAME="Name"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_AVATAR="Avatar"
+COM_KUNENA_TEMPLATE_WHOISONLINE_NAME_BOTH="Both"
+COM_KUNENA_TEMPLATE_LOAD_BOOTSTRAP="Load Bootstrap css"
+COM_KUNENA_TEMPLATE_LOAD_BOOTSTRAP_DESC="Load Bootstrap css for none Bootstrap templates"
+COM_KUNENA_TEMPLATE_DISPLAY_WRITEACCESS="Write Access"
+COM_KUNENA_TEMPLATE_DISPLAY_WRITEACCESS_DESC="Show the access rights on the bottom of the topics"
+COM_KUNENA_TEMPLATE_DISPLAY_INSTAGRAM="Show <strong>Instagram</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_INSTAGRAM_DESC="Show <strong>Instagram</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD="Show <strong>Soundcloud</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_SOUNDCLOUD_DESC="Show <strong>Soundcloud</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_CONFIDENTIAL = "Show <strong>Confidential</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_CONFIDENTIAL_DESC = "Show <strong>Confidential</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_HR = "Show <strong>Horizontal ruler</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_HR_DESC = "Show <strong>Horizontal ruler</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_LISTITEM = "Show <strong>List item</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_LISTITEM_DESC = "Show <strong>List item</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_SUPERSCRIPT = "Show <strong>Superscript</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_SUPERSCRIPT_DESC = "Show <strong>Superscript</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_SUBSCRIPT = "Show <strong>Subscript</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_SUBSCRIPT_DESC = "Show <strong>Subscript</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_NUMBERING = "Show <strong>Numbering</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_NUMBERING_DESC = "Show <strong>Numbering</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_BULLETS = "Show <strong>Bullets</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_BULLETS_DESC = "Show <strong>Bullets</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_ALIGNRIGHT = "Show <strong>Align Right</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_ALIGNRIGHT_DESC = "Show <strong>Align Right</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_ALIGNLEFT = "Show <strong>Align Left</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_ALIGNLEFT_DESC = "Show <strong>Align Left</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_CENTER = "Show <strong>Center</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_CENTER_DESC = "Show <strong>Center</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_UNDERLINE = "Show <strong>Underline</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_UNDERLINE_DESC = "Show <strong>Underline</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_ITALIC = "Show <strong>Italic</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_ITALIC_DESC = "Show <strong>Italic</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_BOLD = "Show <strong>Bold</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_BOLD_DESC = "Show <strong>Bold</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_STRIKETHROUGH = "Show <strong>Strikethrough</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_STRIKETHROUGH_DESC = "Show <strong>Strikethrough</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_COLORS = "Show <strong>Colors</strong> drop menu"
+COM_KUNENA_TEMPLATE_DISPLAY_COLORS_DESC = "Show <strong>Colors</strong> drop menu on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_SIZE = "Show <strong>Size</strong> drop menu"
+COM_KUNENA_TEMPLATE_DISPLAY_SIZE_DESC = "Show <strong>Size</strong> drop menu on editor"
 COM_KUNENA_EDITOR_SIZE_VERY_VERY_SMALL = "Very very small"
 COM_KUNENA_EDITOR_SIZE_VERY_SMALL = "Very small"
 COM_KUNENA_EDITOR_SIZE_SMALL = "Small"
@@ -598,86 +630,86 @@ COM_KUNENA_TEMPLATE_LIGHTBOXCOLOR_BLACK = "Black"
 COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH = "Message title length"
 COM_KUNENA_TEMPLATE_DISPLAY_MENU = "Show menu"
 COM_KUNENA_TEMPLATE_DISPLAY_MENU_DESC = "Show menu on the forum"
-COM_KUNENA_TEMPLATE_DISPLAY_MODULE = "Display modules"
-COM_KUNENA_TEMPLATE_DISPLAY_MODULE_DESC = "Display modules on the forum"
-COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB = "Display breadcrumbs"
-COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB_DESC = "Display breadcrumbs on the forum"
-COM_KUNENA_TEMPLATE_DISPLAY_ANNOUNCEMENT = "Show announcements"
-COM_KUNENA_TEMPLATE_DISPLAY_ANNOUNCEMENT_DESC = "Show announcements on the forum"
-COM_KUNENA_TEMPLATE_DISPLAY_FOOTER = "Display footer"
-COM_KUNENA_TEMPLATE_DISPLAY_FOOTER_DESC = "Display the footer on the forum"
-COM_KUNENA_TEMPLATE_DISPLAY_VIDEO = "Show video"
-COM_KUNENA_TEMPLATE_DISPLAY_VIDEO_DESC = "Show video on editor"
-COM_KUNENA_TEMPLATE_DISPLAY_MAPS = "Show maps"
-COM_KUNENA_TEMPLATE_DISPLAY_MAPS_DESC = "Show maps on editor"
-COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS = "Show emoticons"
-COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS_DESC = "Show emoticons on editor"
-COM_KUNENA_TEMPLATE_DISPLAY_TWITTER = "Show twitter"
-COM_KUNENA_TEMPLATE_DISPLAY_TWITTER_DESC = "Show twitter on editor"
-COM_KUNENA_TEMPLATE_DISPLAY_EBAY = "Show ebay"
-COM_KUNENA_TEMPLATE_DISPLAY_EBAY_DESC = "Show ebay on editor"
-COM_KUNENA_TEMPLATE_DISPLAY_LINK = "Show link"
-COM_KUNENA_TEMPLATE_DISPLAY_LINK_DESC = "Show link on editor"
-COM_KUNENA_TEMPLATE_DISPLAY_PICTURE = "Show picture"
-COM_KUNENA_TEMPLATE_DISPLAY_PICTURE_DESC = "Show picture on editor"
-COM_KUNENA_TEMPLATE_DISPLAY_HIDE = "Show hide"
-COM_KUNENA_TEMPLATE_DISPLAY_HIDE_DESC = "Show hide on editor"
-COM_KUNENA_TEMPLATE_DISPLAY_SPOILER = "Show spoiler"
-COM_KUNENA_TEMPLATE_DISPLAY_SPOILER_DESC = "Show spoiler on editor"
-COM_KUNENA_TEMPLATE_DISPLAY_TABLE = "Show table"
-COM_KUNENA_TEMPLATE_DISPLAY_TABLE_DESC = "Show table on editor"
-COM_KUNENA_TEMPLATE_DISPLAY_CODE = "Show code"
-COM_KUNENA_TEMPLATE_DISPLAY_CODE_DESC = "Show code on editor"
-COM_KUNENA_TEMPLATE_DISPLAY_QUOTE = "Show quote"
-COM_KUNENA_TEMPLATE_DISPLAY_QUOTE_DESC = "Show quote on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_MODULE="Display modules"
+COM_KUNENA_TEMPLATE_DISPLAY_MODULE_DESC="Display modules on the forum"
+COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB="Display breadcrumbs"
+COM_KUNENA_TEMPLATE_DISPLAY_BREADCRUMB_DESC="Display breadcrumbs on the forum"
+COM_KUNENA_TEMPLATE_DISPLAY_ANNOUNCEMENT="Show announcements"
+COM_KUNENA_TEMPLATE_DISPLAY_ANNOUNCEMENT_DESC="Show announcements on the forum"
+COM_KUNENA_TEMPLATE_DISPLAY_FOOTER="Display footer"
+COM_KUNENA_TEMPLATE_DISPLAY_FOOTER_DESC="Display the footer on the forum"
+COM_KUNENA_TEMPLATE_DISPLAY_VIDEO = "Show <strong>Video</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_VIDEO_DESC = "Show <strong>Video</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_MAPS = "Show <strong>Maps</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_MAPS_DESC = "Show <strong>Maps</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS = "Show <strong>Emoticons</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_EMOTICONS_DESC = "Show <strong>Emoticons</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_TWITTER = "Show <strong>Twitter</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_TWITTER_DESC = "Show <strong>Twitter</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_EBAY = "Show <strong>Ebay</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_EBAY_DESC = "Show <strong>Ebay</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_LINK = "Show <strong>Link</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_LINK_DESC = "Show <strong>Link</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_PICTURE = "Show <strong>Picture</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_PICTURE_DESC = "Show <strong>Picture</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_HIDE = "Show <strong>Hide</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_HIDE_DESC = "Show <strong>Hide</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_SPOILER = "Show <strong>Spoiler</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_SPOILER_DESC = "Show <strong>Spoiler</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_TABLE = "Show <strong>Table</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_TABLE_DESC = "Show <strong>Table</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_CODE = "Show <strong>Code</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_CODE_DESC = "Show <strong>Code</strong> button on editor"
+COM_KUNENA_TEMPLATE_DISPLAY_QUOTE = "Show <strong>Quote</strong> button"
+COM_KUNENA_TEMPLATE_DISPLAY_QUOTE_DESC = "Show <strong>Quote</strong> button on editor"
 COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER = "Show divider"
 COM_KUNENA_TEMPLATE_DISPLAY_DIVIDER_DESC = "Show divider on editor"
 COM_KUNENA_TEMPLATE_SUBJECT_LENGTH_MESSAGE_LENGTH_DESC = "Max. message title length in message"
-COM_KUNENA_TEMPLATE_RECOVER = "Recover crash and store fields"
-COM_KUNENA_TEMPLATE_RECOVER_DESC = "This will remember the data from your messages, on crashes or move data from quickreply to editor"
-COM_KUNENA_TEMPLATE_DEFAULT_ICON = "Default category icon"
-COM_KUNENA_TEMPLATE_DEFAULT_ICON_DESC = "Default category icon, default is icon-folder"
-COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS = "Select color for categories icons"
-COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_DESC = "Select color for categories icons"
-COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW = "Select color for NEW icon and text"
-COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW_DESC = "Select color for NEW icon and text"
-COM_KUNENA_EDITOR_TAB_WRITE_LABEL = "Write"
-COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE = "Display Social Share"
-COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE_DESC = "Needs fontawesome for the icons"
-COM_KUNENA_TEMPLATE_DISPLAY_SOCIALTHEME = "Social Theme"
-COM_KUNENA_TEMPLATE_DISPLAY_SOCIALTHEME_DESC = "Select the theme for social buttons"
-COM_KUNENA_CLASSIC = "Classic"
-COM_KUNENA_FLAT = "Flat"
-COM_KUNENA_MINIMA = "Minima"
-COM_KUNENA_PLAIN = "Plain"
-COM_KUNENA_ACCESS_ALLOWED = "Allowed:"
-COM_KUNENA_ACCESS_NOTALLOWED = "Not Allowed:"
-COM_KUNENA_ACCESS_ALLOWED_CREATETOPIC = "to create new topic."
-COM_KUNENA_ACCESS_ALLOWED_REPLY = " to reply."
-COM_KUNENA_ACCESS_ALLOWED_ADDATTACH = "to add attachements."
-COM_KUNENA_ACCESS_ALLOWED_EDITPOST = "to edit your message."
-COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_LABEL = "Category Image Path"
-COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_DESC = "Category Image Path. If you set the path as category_images, the full path will be your_html_rootfolder/media/kunena/category_images/"
-COM_KUNENA_LABELS_QUESTION = "Question"
-COM_KUNENA_LABELS_IMPORTANT = "Important"
-COM_KUNENA_LABELS_IDEA = "Idea"
-COM_KUNENA_LABELS_LOVED = "Loved"
-COM_KUNENA_LABELS_SOLVED = "Solved"
-COM_KUNENA_LABELS_MERGED = "Merged"
-COM_KUNENA_LABELS_DELETED = "Deleted"
-COM_KUNENA_DISABLED = "Disabled"
-COM_KUNENA_ENABLED_TOPIC = "Topic id"
-COM_KUNENA_ENABLED_LABEL = "Custom id"
-COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS = "Load external icons"
-COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS_DESC = "Load the cdn glyphicons css file"
-COM_KUNENA_TEMPLATE_BORDERLESS = "Hide table borders"
-COM_KUNENA_TEMPLATE_BORDERLESS_DESC = "Remove the border around the tables"
-COM_KUNENA_TEMPLATE_FULLACTIONS = "Show default actions"
-COM_KUNENA_TEMPLATE_FULLACTIONS_DESC = "Order actions by button groups"
-COM_KUNENA_TEMPLATE_QUICKREPLY = "Type Quickreply"
-COM_KUNENA_TEMPLATE_QUICKREPLY_DESC = "How would you show the quickreply"
-COM_KUNENA_TEMPLATE_QUICKREPLY_MODAL = "Modal"
-COM_KUNENA_TEMPLATE_QUICKREPLY_ALWAYS = "Always visible"
+COM_KUNENA_TEMPLATE_RECOVER="Recover crash and store fields"
+COM_KUNENA_TEMPLATE_RECOVER_DESC="This will remember the data from your messages, on crashes or move data from quickreply to editor"
+COM_KUNENA_TEMPLATE_DEFAULT_ICON="Default category icon"
+COM_KUNENA_TEMPLATE_DEFAULT_ICON_DESC="Default category icon, default is icon-folder"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS="Select color for categories icons"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_DESC="Select color for categories icons"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW="Select color for NEW icon and text"
+COM_KUNENA_TEMPLATE_COLORS_ICONS_COLORS_NEW_DESC="Select color for NEW icon and text"
+COM_KUNENA_EDITOR_TAB_WRITE_LABEL="Write"
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE="Display Social Share"
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALSHARE_DESC="Needs fontawesome for the icons"
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALTHEME="Social Theme"
+COM_KUNENA_TEMPLATE_DISPLAY_SOCIALTHEME_DESC="Select the theme for social buttons"
+COM_KUNENA_CLASSIC="Classic"
+COM_KUNENA_FLAT="Flat"
+COM_KUNENA_MINIMA="Minima"
+COM_KUNENA_PLAIN="Plain"
+COM_KUNENA_ACCESS_ALLOWED="Allowed:"
+COM_KUNENA_ACCESS_NOTALLOWED="Not Allowed:"
+COM_KUNENA_ACCESS_ALLOWED_CREATETOPIC="to create new topic."
+COM_KUNENA_ACCESS_ALLOWED_REPLY=" to reply."
+COM_KUNENA_ACCESS_ALLOWED_ADDATTACH="to add attachements."
+COM_KUNENA_ACCESS_ALLOWED_EDITPOST="to edit your message."
+COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_LABEL="Category Image Path"
+COM_KUNENA_TEMPLATE_CATEGORY_IMAGEPATH_DESC="Category Image Path. If you set the path as category_images, the full path will be your_html_rootfolder/media/kunena/category_images/"
+COM_KUNENA_LABELS_QUESTION="Question"
+COM_KUNENA_LABELS_IMPORTANT="Important"
+COM_KUNENA_LABELS_IDEA="Idea"
+COM_KUNENA_LABELS_LOVED="Loved"
+COM_KUNENA_LABELS_SOLVED="Solved"
+COM_KUNENA_LABELS_MERGED="Merged"
+COM_KUNENA_LABELS_DELETED="Deleted"
+COM_KUNENA_DISABLED="Disabled"
+COM_KUNENA_ENABLED_TOPIC="Topic id"
+COM_KUNENA_ENABLED_LABEL="Custom id"
+COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS="Load external icons"
+COM_KUNENA_TEMPLATE_LOAD_EXTERNAL_ICONS_DESC="Load the cdn glyphicons css file"
+COM_KUNENA_TEMPLATE_BORDERLESS="Hide table borders"
+COM_KUNENA_TEMPLATE_BORDERLESS_DESC="Remove the border around the tables"
+COM_KUNENA_TEMPLATE_FULLACTIONS="Show default actions"
+COM_KUNENA_TEMPLATE_FULLACTIONS_DESC="Order actions by button groups"
+COM_KUNENA_TEMPLATE_QUICKREPLY="Type Quickreply"
+COM_KUNENA_TEMPLATE_QUICKREPLY_DESC="How would you show the quickreply"
+COM_KUNENA_TEMPLATE_QUICKREPLY_MODAL="Modal"
+COM_KUNENA_TEMPLATE_QUICKREPLY_ALWAYS="Always visible"
 
 ; JROOT/components/com_kunena/template/crypsis/template.xml
 
